MFC r336632: Update modify counter when setting a mixer control.

PR:		229969